//说明是proto3语法
syntax = "proto3";

//第一个参数是生产的go文件在哪个位置 service是生成的go文件的包名
option go_package = "./;service";

//服务中定义被调用方法
service SayHello{
  rpc SayHello(HelloRequest) returns (HelloResponse){}
}

//定义方法中使用的变量类型（结构体）
message HelloRequest{
  string requestName = 1;  //;就是消息标识号
}

message HelloResponse{
  string responseMsg = 1;
}